# silicon_valet

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.sh
.claude/: launch.json
deploy/: 00-namespace.yaml  01-configmap.yaml  02-pvc.yaml  03-ollama-worker01.yaml  04-ollama-worker02.yaml  05-ollama-services.yaml  06-chromadb.yaml  07-valet-core.yaml  08-valet-service.yaml
silicon_valet/: __init__.py  __main__.py  config.py  environment.py
silicon_valet/api/: __init__.py  openai_compat.py
silicon_valet/cli/: __init__.py  client.py  commands.py  display.py
silicon_valet/dna/: __init__.py  models.py  scanner.py  schema.py  store.py
silicon_valet/memory/: __init__.py  context.py  embeddings.py  episodic.py  procedural.py
silicon_valet/orchestrator/: __init__.py  coder.py  handoff.py  planner.py  router.py
silicon_valet/packs/: __init__.py  base.py  loader.py
silicon_valet/packs/adtran/: __init__.py
silicon_valet/packs/cisco/: __init__.py
silicon_valet/risk/: __init__.py  classifier.py  engine.py  patterns.py
silicon_valet/server/: __init__.py  protocol.py  session.py  ws_server.py
silicon_valet/tools/: __init__.py  dna_tools.py  filesystem.py  kubernetes.py  memory_tools.py  netdevice.py  network.py  shell.py
tests/: conftest.py  test_commands.py  test_dna_scanner.py  test_dna_store.py  test_handoff.py  test_memory.py  test_pack_loader.py  test_protocol.py  test_risk.py  test_router.py
usb/: README.md  autorun.sh  devices.sample.yaml  prepare_usb.sh
(+10 files in other folders)
